fix icon colors for dark mode

--- a/pages/Languages/Languages.less
+++ b/pages/Languages/Languages.less
@@ -40,6 +40,7 @@
   // large screens
   @media (min-width: @breakpoint) {
 
+    align-content      : start;
     align-items        : start;
     display            : grid;
     grid-template-areas:
